2006-01-17 Quentin Mathe <qmathe@club-internet.fr>
    
   Fixed compilation on Linux Ubuntu x86
   * Source/Search/LCTopDocCollector.m: Included float.h to restore
   compilation (error: FLT_MIN not declared)
   * Source/Document/LCNumberTools.m: Included limits.h to restore compilation
   (error: LLONG_MAX not declared)
   * Source/GNUmakefile.preamble: Updated to enable C99 support (LLONG_MAX is
   not a C99 extension that GCC supports by default).

2006-01-14 Yen-Ju Chen <yjchenx at gmail _dot_ com>
 
   * Source/Util/LCBitVector.m:
   * Headers/Util/LCBitVector.h:
   Use C type instead of objects to optimize the code.

2006-01-11 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Index/LCIndexReader.m:
   * Source/Search/LCPrefixQuery.m:
   * Source/Search/LCTopDocCollector.m:
   * Source/Search/LCTopFieldDocCollector.m:
   * Source/Search/LCIndexSearcher.m:
   * Source/Search/LCMultiTermQuery.m:
   Up-to-date.

2006-01-10 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Index/LCTerm.m:
   * Source/Search/LCFieldCache.m:
   Bug fixed.
   * Unit Test Result: 51 classes, 129 methods, 651980 tests, 0 failed

2006-01-09 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Index/LCDocumentWriter.m:
   * Headers/Index/LCDocumentWriter.h:
   Use C type instead of objects to optimize the code.
   * Source/Index/LCFieldsReader.m:
   * Soruce/Index/LCFieldsWriter.m:
   Improve memory management.
   * Source/Index/LCTerm.m:
   * Source/Index/LCTermBuffer.m:
   Improve memory management and one bug found.

2005-12-27 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Search/LCIndexSearcher.m:
   include float.h

2005-12-26 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   add autorelease pool to reduce memory usage.

2005-12-25 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Index/LCTermVectorsReader.m:
   initiate return value suggested by Dirk Theisen <d.theisen...>

2005-12-22 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Search/LCFieldCacheImpl.m: