@@ -1,3 +1,9 @@
+2006-01-22 Yen-Ju Chen <yjchenx at gmail _dot_ com>
+
+   * Headers/Index/LCIndexModifier.h:
+   * Source/Index/LCIndexModifier.h:
+   make protected methods in Java public in Objective-C.
+
 2006-01-17 Quentin Mathe <qmathe@club-internet.fr>
     
    Fixed compilation on Linux Ubuntu x86
